# ics-gateway-x86

./: CMakeLists.txt  easy-settings.cmake  ics_gateway_x86.camkes  settings.cmake
components/ICS_Inbound/: ICS_Inbound.c  ICS_Inbound_verified.c
components/ICS_Outbound/: ICS_Outbound.c  ICS_Outbound_verified.c
components/ModbusParser/: ModbusParser.c
components/Net0_Driver/: net0_driver.c
components/Net1_Driver/: net1_driver.c
components/include/: ICS_Glue_Inbound.c  ICS_Glue_Outbound.c  ICS_Glue_Verified.c  ICS_Glue_Verified.h  ModbusTCP_v4_PolicyEnforced.c  ModbusTCP_v4_PolicyEnforced.h  ModbusTCP_v4_PolicyEnforcedWrapper.c  ModbusTCP_v4_PolicyEnforcedWrapper.h  ModbusTCP_v5_ResponsePolicy.c  ModbusTCP_v5_ResponsePolicy.h  ModbusTCP_v5_ResponsePolicyWrapper.c  ModbusTCP_v5_ResponsePolicyWrapper.h  common.h  everparse_error_handler.h  modbus_policy.h  modbus_policy_fstar.h  modbus_policy_verify.c  modbus_response_policy_fstar.h
components/interfaces/: ModbusValidate.idl4
components/lib/: everparse_error_handler.c  modbus_policy_fstar.c  modbus_response_policy_fstar.c
verified_glue/: ICS.Glue.CAmkES.fsti  ICS.Glue.Complete.fst  ICS.Glue.Config.fst  ICS.Glue.Inbound.fst  ICS.Glue.LowStar.fst  ICS.Glue.Outbound.fst  ICS.Glue.Spec.fst  ICS.Glue.Types.fst  Makefile  README.md
verified_glue/extracted/: ICS_Glue_Spec.c  ICS_Glue_Spec.h  Makefile.include  out.krml
verified_glue/extracted/internal/: Prims.h
verified_glue/extracted_complete/: ICS_Glue_Complete.c  ICS_Glue_Complete.h  Makefile.include  out.krml
verified_glue/extracted_lowstar/: ICS_Glue_LowStar.c  ICS_Glue_LowStar.h  Makefile.include  out.krml
